--- a/.github/workflows/ReleaseBuilds.yml
+++ b/.github/workflows/ReleaseBuilds.yml
@@ -44,11 +44,13 @@ jobs:
           compression-level: 0
 
   build-macos:
-    runs-on: macos-11
+    runs-on: macos-12  # last runner to ship Xcode 13, which supports macOS 10.11
     timeout-minutes: 15
     steps:
       - uses: actions/checkout@v4
         with: {submodules: 'recursive'}
+      - uses: maxim-lobanov/setup-xcode@v1
+        with: { xcode-version: '13' }  # last version that supports macOS 10.11
       - name: Get artifact name
         run: |
           ARTIFACT_NAME="$(python3 build.py --print-artifact-name)"
